--- a/absolute-position2.html
+++ b/absolute-position2.html
@@ -12,6 +12,10 @@
             width: 200px;
         }
 
+        .swimming {
+            position: relative;
+        }
+
         #ring {
             position: absolute;
             left: 30px;
