--- a/sticky-position.html
+++ b/sticky-position.html
@@ -12,10 +12,20 @@
             width: 200px;
         }
 
+        .swimming {
+            position: relative;
+        }
+
         #ring {
-            position: absolute;
-            left: 30px;
+            position: sticky;
+            left: 0px;
             top: -40px;
+        }
+
+        .dummy {
+            height: 150px;
+            width: 250px;
+            background-color: bisque;
         }
     </style>
 </head>
@@ -30,6 +40,22 @@
         <div><img src="images/boy.svg" alt=""></div>
         <div id="ring"><img src="images/ring.svg" alt=""></div>
         <div><img src="images/water.svg" alt=""></div>
+        <br>
+        <div class="dummy"></div>
+        <div class="dummy"></div>
+        <div class="dummy"></div>
+        <div class="dummy"></div>
+        <div class="dummy"></div>
+        <div class="dummy"></div>
+        <div class="dummy"></div>
+        <div class="dummy"></div>
+        <div class="dummy"></div>
+        <div class="dummy"></div>
+        <div class="dummy"></div>
+        <div class="dummy"></div>
+        <div class="dummy"></div>
+        <div class="dummy"></div>
+        <div class="dummy"></div>
 
     </section>
 
